--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/css/index.css">
+    <link rel="stylesheet" href="/src/public/css/index.css">
     <title></title>
 </head>
 <body>  
@@ -18,7 +18,7 @@
         </div>
 
         <div class="imagem_banner">
-            <img class="imagem_banner" src="../public/img/img_banner.svg" alt="">
+            <img class="imagem_banner" src="src/public/img/img_banner.svg" alt="">
         </div>
     </main>
 
@@ -44,7 +44,7 @@
                 <button class="botao_audio">Ouça</button>
             </div>
             <div class="area_img">
-                <img class="img_informacao" src="../public/img/hepatite.png" alt="">
+                <img class="img_informacao" src="src/public/img/hepatite.png" alt="">
             </div>
         </div>
         <div class="informacao" id="informacao2">
@@ -66,18 +66,18 @@
             </div>
             <div class="area_img">
                 <!--Trocar a imagem, pois ela não centraliza-->
-                <img class="img_informacao" src="../public/img/hepatite.png" alt="">
+                <img class="img_informacao" src="src/public/img/hepatite.png" alt="">
             </div>
         </div>
 
         <div class="informacao" id="informacao3">
             <div id="area_textoEsquerda">
                 <h1 style="text-align: center;">Uso de Drogas Ilícitas</h1>
-                <img id="img_informacaoEsquerda" src="../public/img/hepatite.png" alt="">
+                <img id="img_informacaoEsquerda" src="src/public/img/hepatite.png" alt="">
             </div>
             <div id="area_textoDireita">
                 <h1 style="text-align: center;">Doença de Parkinson</h1>
-                <img id="img_informacaoDireita" src="../public/img/hepatite.png" alt="">
+                <img id="img_informacaoDireita" src="src/public/img/hepatite.png" alt="">
             </div>
         </div>
     </main>
