--- a/index.html
+++ b/index.html
@@ -73,13 +73,80 @@
         <div class="informacao" id="informacao3">
             <div id="area_textoEsquerda">
                 <h1 style="text-align: center;">Uso de Drogas Ilícitas</h1>
-                <img id="img_informacaoEsquerda" src="src/public/img/hepatite.png" alt="">
+                <img id="img_informacaoEsquerda" src="src/public/img/drogas.png" alt="">
             </div>
             <div id="area_textoDireita">
                 <h1 style="text-align: center;">Doença de Parkinson</h1>
-                <img id="img_informacaoDireita" src="src/public/img/hepatite.png" alt="">
+                <img id="img_informacaoDireita" src="src/public/img/parkinson.png" alt="">
             </div>
         </div>
     </main>
+
+    <main id="conteinner_intervalo">
+        <h1 class="title_secao">Intervalo de Doação</h1>
+        <div id="intervalo">
+            <div id="intervalo_homens">
+                <h1 style="text-align: center;">Homens</h1>
+                <p class="texto" style="text-align: center;">
+                    <strong>60 dias</strong>
+                        <br> 
+                    (máximo de 04 doações nos últimos 12 meses).
+                </p>
+                <img id="img_homens" src="/src/public/img/homem.png" alt="">
+            </div>
+            <div id="intervalo_mulheres">
+                <h1 style="text-align: center;">Mulheres</h1>
+                <p class="texto" style="text-align: center;">
+                    <strong>90 dias</strong> 
+                        <br>
+                    (máximo de 03 doações nos últimos 12 meses).
+                </p>
+                <img id="img_mulheres" src="/src/public/img/mulher.png" alt="">
+            </div>
+        </div>
+    </main>
+
+    <footer id="conteinner_rodape">
+        <ul id="rodape_sobre">
+            <li>
+                <strong>Hemonorte</strong>
+                <br>
+                Horário de Funcionamento:
+                <br>
+                Segunda à Sábado, das 
+                <br>
+                7h às 18h
+            </li>
+
+            <li>
+                <strong>Endereço:</strong>
+                <br>
+                Av. Alexandrino de Alencar, 
+                <br>
+                1800
+                Tirol, 
+                <br>
+                Natal - RN, 59015-350
+            </li>
+
+            <li>
+                <strong>Hemonorte no Partage Shopping</strong>                
+                <br>
+                Horário de Funcionamento:
+                <br>
+                Segunda a sexta: 
+                <br>
+                8h às 11h30 e das 13h às 17h
+            </li>
+
+            <li>
+               <strong>Desenvolvido por:</strong>
+                <br>
+                Daniel Cruz
+                <br>
+                Rafael Bezerra
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
