ajustando responsividade, imagens, cores. Adicionando novas tag's.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="/src/public/css/index.css">
     <title></title>
 </head>
-<body>  
+<body>
+    <header id="barra_inicial">
+        <img id="img_logo" src="/src/public/img/icon_hemonorte.png" alt="">
+        <h1>Hemonorte</h1>
+    </header>
+
     <main id="banner">
         <div id="texto_banner">
             <h1>
@@ -14,12 +19,36 @@
                 <br>
                 Requisitos e Dicas Importantes!
             </h1>
-
         </div>
 
         <div class="imagem_banner">
             <img class="imagem_banner" src="src/public/img/img_banner.svg" alt="">
         </div>
+    </main>
+
+    <main>
+        <ul id="conteinner_requisitos">
+            <li>
+                <button class="requisito">
+                    <img class="img_requisito" src="/src/public/img/enfermeira_bolsaSangue.png" alt="">
+                    <img class="gif_clique" src="/src/public/img/click.gif" alt="">
+                </button>
+            </li>
+
+            <li>
+                <button class="requisito">
+                    <img class="img_requisito" src="/src/public/img/enfermeira_bolsaSangue.png" alt="">
+                    <img class="gif_clique" src="/src/public/img/click.gif" alt="">
+                </button>
+            </li>
+
+            <li>
+                <button class="requisito">
+                    <img class="img_requisito" src="/src/public/img/enfermeira_bolsaSangue.png" alt="">
+                    <img class="gif_clique" src="/src/public/img/click.gif" alt="">
+                </button>
+            </li>
+        </ul>
     </main>
 
     <main id="conteinner_informacoes">
@@ -41,7 +70,9 @@
                     <strong>Hepatite viral (A):</strong> após os 11 anos de idade, se trouxer o exame do diagnóstico da doença, 
                     será avaliado pelo médico da triagem.
                 </p>
-                <button class="botao_audio">Ouça</button>
+                <button class="botao_audio">
+                    <img class="img_audio" src="/src/public/img/audio.png" alt="">
+                </button>
             </div>
             <div class="area_img">
                 <img class="img_informacao" src="src/public/img/hepatite.png" alt="">
@@ -62,11 +93,13 @@
                     <br>
                     <strong>Doença de Chagas.</strong>
                 </p>
-                <button class="botao_audio">Ouça</button>
+                <button class="botao_audio">
+                    <img class="img_audio" src="/src/public/img/audio.png" alt="">
+                </button>
             </div>
             <div class="area_img">
                 <!--Trocar a imagem, pois ela não centraliza-->
-                <img class="img_informacao" src="src/public/img/hepatite.png" alt="">
+                <img class="img_informacao" src="src/public/img/check.png" alt="">
             </div>
         </div>
 
