--- a/index.html
+++ b/index.html
@@ -424,9 +424,14 @@
             <li>
                <strong>Desenvolvido por:</strong>
                 <br>
-                Daniel Cruz
+                <a class="link" href="https://www.linkedin.com/in/daniewcruz/">Daniel Cruz</a>
                 <br>
-                Rafael Bezerra
+                Email: daniewcruz@gmail.com
+                <br>
+                <br>
+                <a class="link" href="#">Rafael Bezerra</a>
+                <br>
+                Email: rafaelb120934@gmail.com
             </li>
         </ul>
     </footer>
