ajustando o título e sentido do conteúdo do requisito 3

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 <dialog id="dialog_3" class="dialog">
                     <button onclick="fechar_dialog3()" class="botao_fecharDialog">X</button>
     
-                    <h1 style="text-align: center;">Documentos Necessários</h1>
+                    <h1 style="text-align: center;">Documento</h1>
                     <p style="text-align: center;" class="paragrafo_dialog">
-                       <strong>Apresentar:</strong>
+                       <strong>É necessário apresentar apenas 1 documento dos citados abaixo:</strong>
                             <br>
                             <br>
                         <b>-</b> Documento de identificação com fotografia, emitido por órgão oficial. 
