--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                     Aguarde <strong>7 dias após o desaparecimento dos sintomas;</strong>
                         <br>
                         <br>
-                    <b>-</b> Gripe
+                    <b>-</b> Gripe;
                         <br>
-                    <b>-</b> Resfriado
+                    <b>-</b> Resfriado;
                         <br>
-                    <b>-</b> Febre
+                    <b>-</b> Febre;
                         <br>
                 </p>
                 <button class="botao_audio" onclick="lerTexto('informacao1')">
@@ -162,7 +162,7 @@
             <div class="area_texto">
                 <h1 style="text-align: center;">Gestantes</h1>
                 <p class="texto" style="text-align: center;">
-                    Período gestacional;
+                    Período gestacional:
                         <br>
                         <br>
 	                <b>-</b> Período pós-gravidez: <strong>90 dias</strong> para parto normal e <strong>180 dias</strong> para cesariana;
@@ -258,19 +258,19 @@
                             <b>-</b> Hepatite após os <strong>11 anos</strong> de idade;
                                 <br>
                                 <br>
-                            <b>-</b> Hepatites <b>B</b> e <b>C,</b>
+                            <b>-</b> Hepatites <b>B</b> e <b>C;</b>
                                 <br>
                                 <br>
-                            <b>-</b> AIDS (vírus HIV),
+                            <b>-</b> AIDS (vírus HIV);
                                 <br>
                                 <br>
-                            <b>-</b> Sífilis 
+                            <b>-</b> Sífilis;
                                 <br>
                                 <br>
-                            <b>-</b> Doenças associadas aos vírus <strong>HTLV I</strong> e <strong>II,</strong> 
+                            <b>-</b> Doenças associadas aos vírus <strong>HTLV I</strong> e <strong>II;</strong> 
                                 <br>
                                 <br>
-                            <b>-</b> Doença de Chagas
+                            <b>-</b> Doença de Chagas;
                                 <br>
                                 <br>
                             <b>-</b> Malária;
@@ -279,28 +279,28 @@
                         <strong>Doenças Hematológicas:</strong>
                                 <br>
                                 <br>
-                            <b>-</b> Anemia,
+                            <b>-</b> Anemia;
                                 <br>
                                 <br>
-                            <b>-</b> Trombocitopenia imune,
+                            <b>-</b> Trombocitopenia imune;
                                 <br>
                                 <br>
-                            <b>-</b> Trombose,
+                            <b>-</b> Trombose;
                                 <br>
                                 <br>
-                            <b>-</b> Trombofilias,
+                            <b>-</b> Trombofilias;
                                 <br>
                                 <br>
-                            <b>-</b> Distúrbio do metabolismo do ferro,
+                            <b>-</b> Distúrbio do metabolismo do ferro;
                                 <br>
                                 <br>
-                            <b>-</b> Leucemias agudas e crônicas,
+                            <b>-</b> Leucemias agudas e crônicas;
                                 <br>
                                 <br>
-                            <b>-</b> Linfomas,
+                            <b>-</b> Linfomas;
                                 <br>
                                 <br>
-                            <b>-</b> Mieloma múltiplo,
+                            <b>-</b> Mieloma múltiplo;
                                 <br>
                                 <br>
                             <b>-</b> Síndrome mielodisplásica.
@@ -336,7 +336,7 @@
                             <b>-</b> Tuberculose;
                                 <br>
                                 <br>
-                            <b>-</b> Câncer 
+                            <b>-</b> Câncer.
                     </p>
                 </div>
                 <div class="areaImg_impedimento">
@@ -355,7 +355,7 @@
                         <b>-</b> Sangramentos anormais;
                             <br>
                             <br>
-                        <b>-</b> Convulsões
+                        <b>-</b> Convulsões.
                     </p>
                 </div>
                 <div class="areaImg_impedimento">
