alterei título e logomarca do site ajustei conteúdo de intervalo de doações, adicionei link do linkedin

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 </head>
 <body>
     <header id="barra_inicial">
-        <img id="img_logo" src="/src/public/img/icon_hemonorte.png" alt="">
-        <h1>Hemonorte</h1>
+        <img id="img_logo" src="/src/public/img/logo_doeVida.png" alt="">
+        <h1>Doe Vida</h1>
     </header>
 
     <main id="banner">
         <div id="texto_banner">
             <h1>
-                Prepare-se para Doar:
-                <br>
-                Requisitos e Dicas Importantes!
+                Guia de Orientações e Dicas sobre Doação de Sangue.
             </h1>
         </div>
 
@@ -339,7 +337,7 @@
                 <p class="texto" style="text-align: center;">
                     <strong>60 dias</strong>
                         <br> 
-                    (máximo de 04 doações nos últimos 12 meses).
+                    (máximo de 04 doações por ano).
                 </p>
                 <img id="img_homens" src="/src/public/img/homem.png" alt="">
             </div>
@@ -348,7 +346,7 @@
                 <p class="texto" style="text-align: center;">
                     <strong>90 dias</strong> 
                         <br>
-                    (máximo de 03 doações nos últimos 12 meses).
+                    (máximo de 03 doações por ano).
                 </p>
                 <img id="img_mulheres" src="/src/public/img/mulher.png" alt="">
             </div>
@@ -396,7 +394,7 @@
                 Email: daniewcruz@gmail.com
                 <br>
                 <br>
-                <a class="link" href="#">Rafael Bezerra</a>
+                <a class="link" href="https://www.linkedin.com/in/rafabsilva/">Rafael Bezerra</a>
                 <br>
                 Email: rafaelb120934@gmail.com
             </li>
