--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
                 </button>
             </div>
             <div class="area_img">
-                <!-- Trocar a imagem, pois ela não centraliza -->
                 <img class="img_informacao" src="src/public/img/vacinacao.png" alt="">
             </div>
         </div>
@@ -414,12 +413,12 @@
             <li>
                <strong>Desenvolvido por:</strong>
                 <br>
-                <a class="link" href="https://www.linkedin.com/in/daniewcruz/">Daniel Cruz</a>
+                <a class="link" href="https://www.linkedin.com/in/daniewcruz/"><u>Daniel Cruz</u></a>
                 <br>
                 Email: daniewcruz@gmail.com
                 <br>
                 <br>
-                <a class="link" href="https://www.linkedin.com/in/rafabsilva/">Rafael Bezerra</a>
+                <a class="link" href="https://www.linkedin.com/in/rafabsilva/"><u>Rafael Bezerra</u></a>
                 <br>
                 Email: rafaelb120934@gmail.com
             </li>
